test_src/compiler_errors/literals/LongTooLargeError1.b
class LongTooLargeError1 {
    void test() {
        println(9223372036854775808L);
    }
}
